# test

./: .gitignore  pyproject.toml  test.json
.github/workflows/: windows-build-installer.yml
notes/: 2026-04-09_changes.txt  CHANGELOG.md
scripts/: build_windows_installer.bat  build_windows_installer.ps1  windows_installer.iss
scripts/jjc.air/: jjc.py
scripts/nisi55.air/: nisi55.py
src/app/: __init__.py  config.py  main.py  runner.py  script_parser.py  ui.py  window_detector.py
